[package]
name = "ts_encyclopedia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "*"
actix-web = "4"
chrono = "*"
futures = "*"
maud = { version = "*", features = ["actix-web"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tower-http = { version = "*", features = ["fs"] }
